# chalk

./: .gitignore  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  smoke-test.yml
skills/slides/: SKILL.md
src/arche/: __init__.py  cli.py  extract.py  llm.py  pdf.py  prompt.py
src/chalk/: __init__.py  cli.py  extract.py
src/chalk/data/: SKILL.md
tests/: conftest.py  test_arche.py  test_chalk.py  test_cli.py  test_extract.py  test_llm.py  test_pdf.py
