[project]
name = "chalk-pypi"
version = "0.3.1"
description = "Explains lecture slides using Claude. For when you have the slides but not the lecture."
readme = "README.md"
license = "MIT"
authors = [
    { name = "fadli0029", email = "fadlialim0029@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.84.0",
    "pymupdf>=1.27.1",
]

[project.urls]
Repository = "https://github.com/fadli0029/chalk"
Issues = "https://github.com/fadli0029/chalk/issues"

[project.scripts]
chalk = "chalk:main"
chalk-extract = "chalk.extract:_main_deprecated"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "chalk"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pymupdf-stubs>=1.25.5",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

# ──────────────────────────────────────────────
# Tool configuration
# ──────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",      # Pyflakes — undefined names, unused imports
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort — import ordering
    "N",      # pep8-naming — naming conventions
    "UP",     # pyupgrade — modernize syntax
    "B",      # flake8-bugbear — common bugs
    "A",      # flake8-builtins — shadowing builtins
    "C4",     # flake8-comprehensions — better comprehensions
    "SIM",    # flake8-simplify — simplifiable code
    "T20",    # flake8-print — no print statements
]